--- a/static/less/mobile.less
+++ b/static/less/mobile.less
@@ -10,6 +10,11 @@
   flex-flow: column;
   font-size: 1.25em;
 
+  #alerts {
+    right: 60px;
+    top: 40px;
+  }
+
   & > div#header {
     display: flex;
     height: @headerHeight;
